@@ -7,7 +7,7 @@ Prerequisites
  * Python 2.7 or later (http://www.python.org/)
  * trytond (http://www.tryton.org/)
  * trytond_country (http://www.tryton.org/)
- * Optional: vatnumber (http://code.google.com/p/vatnumber/)
+ * python-stdnum (http://arthurdejong.org/python-stdnum/)
 
 Installation
 ------------
