@@ -96,7 +96,7 @@ setup(name=name,
     license='GPL-3',
     install_requires=requires,
     extras_require={
-        'VAT': ['vatnumber', 'python-stdnum'],
+        'VAT': ['python-stdnum'],
         },
     zip_safe=False,
     entry_points="""
