@@ -1,10 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<form string="VAT Information Exchange System">
-    <image name="tryton-dialog-information" xexpand="0" xfill="0"/>
-    <label string="You must have a recent version of &quot;vatnumber&quot; installed!"
-        id="vatnumber"
-        yalign="0.0" xalign="0.0" xexpand="1"/>
-</form>
-
