@@ -24,12 +24,8 @@ this repository contains the full copyright notices and license terms. -->
             <field name="categories" colspan="2"
                 view_ids="party.category_view_list"/>
         </page>
-        <page string="Accounting" id="accounting">
-            <separator string="VAT" colspan="4" id="vat"/>
-            <label name="vat_country"/>
-            <field name="vat_country" xexpand="0"/>
-            <label name="vat_number"/>
-            <field name="vat_number"/>
+        <page name="identifiers">
+            <field name="identifiers" colspan="4"/>
         </page>
     </notebook>
 </form>
