@@ -1,3 +1,5 @@
+* Add a list of identifier to party
+
 Version 3.6.0 - 2015-04-20
 * Bug fixes (see mercurial logs for details)
 * Add support for PyPy
